Prevent FullCalendar titles from being cut off

--- a/app/javascript/src/overrides.css
+++ b/app/javascript/src/overrides.css
@@ -306,3 +306,10 @@ button:focus {
 .cell.twelve {
   width: 100%;
 }
+
+/*
+Prevent FullCalendar title text from being cut off
+*/
+.fc-day-grid-event > .fc-content {
+  white-space: inherit !important;
+}
